# tlk

./: Dockerfile  README.md  pyproject.toml
src/tlk/: constants.py
src/tlk/cli/: main.py  project.py
src/tlk/resources/templates/project/: copier.yaml
src/tlk/resources/templates/project/{{ name }}/: Dockerfile.jinja  README.md.jinja  pyproject.toml.jinja
src/tlk/resources/templates/project/{{ name }}/src/{{ name }}/: cli.py.jinja  constants.py.jinja
src/tlk/resources/templates/project/{{ name }}/src/{{ pkg_name }}/: cli.py.jinja  constants.py.jinja
